<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centro_reg"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/hola"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:contentDescription="@string/imagen_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userphoto" />

    <EditText
        android:id="@+id/nombre_reg"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"

        android:hint="@string/nom_reg"


        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hola" />

    <EditText
        android:id="@+id/eoeo"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="Correo electronico"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_reg" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eoeo" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/reg_edittext_style"

        android:contentDescription="@string/plan_txt"
        android:ems="10"
        android:hint="Confirmar contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/registrar_btn"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/reg_btn_style"

        android:text="@string/vol_reg"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass2" />

    <ProgressBar
        android:id="@+id/reg_pro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/registrar_btn"
        app:layout_constraintEnd_toEndOf="@+id/registrar_btn"
        app:layout_constraintStart_toStartOf="@+id/registrar_btn"
        app:layout_constraintTop_toTopOf="@+id/registrar_btn" />
</android.support.constraint.ConstraintLayout>